--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,11 @@
         </activity>
         <activity
             android:name=".activities.FormActivity"
-            android:screenOrientation="portrait"></activity>
+            android:launchMode="standard"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.UpdateFormActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
